// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIAccordionItemEmptyState /> should change the icon when the name is passed to iconPath 1`] = `
<div
  className="xui-textcolor-muted xui-accordionitem-new--emptystate"
  data-automationid={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="m 20,11 0,-2 -10,0 0,2 4,5 0,4 2,0 0,-4 z"
      role="presentation"
    />
  </svg>
  <div>
    Nothing available to show
  </div>
</div>
`;

exports[`<XUIAccordionItemEmptyState /> should include an icon that defaults to list 1`] = `
<div
  className="xui-textcolor-muted xui-accordionitem-new--emptystate"
  data-automationid={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M13,10 L21,10 L21,12 L13,12 L13,10 Z M9,10 L11,10 L11,12 L9,12 L9,10 Z M9,14 L11,14 L11,16 L9,16 L9,14 Z M13,14 L21,14 L21,16 L13,16 L13,14 Z M13,18 L21,18 L21,20 L13,20 L13,18 Z M9,18 L11,18 L11,20 L9,20 L9,18 Z"
      role="presentation"
    />
  </svg>
  <div>
    Nothing available to show
  </div>
</div>
`;

exports[`<XUIAccordionItemEmptyState /> should render an automation id when passed in the qaHook prop 1`] = `
<div
  className="xui-textcolor-muted xui-accordionitem-new--emptystate"
  data-automationid="test-qahook"
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M13,10 L21,10 L21,12 L13,12 L13,10 Z M9,10 L11,10 L11,12 L9,12 L9,10 Z M9,14 L11,14 L11,16 L9,16 L9,14 Z M13,14 L21,14 L21,16 L13,16 L13,14 Z M13,18 L21,18 L21,20 L13,20 L13,18 Z M9,18 L11,18 L11,20 L9,20 L9,18 Z"
      role="presentation"
    />
  </svg>
  <div>
    Nothing available to show
  </div>
</div>
`;

exports[`<XUIAccordionItemEmptyState /> should render any children after the icon 1`] = `
<div
  className="xui-textcolor-muted xui-accordionitem-new--emptystate"
  data-automationid={undefined}
>
  <svg
    className="xui-icon xui-icon-large"
    data-automationid={undefined}
    focusable="false"
    style={null}
    viewBox="0 0 30 30"
  >
    <path
      d="M13,10 L21,10 L21,12 L13,12 L13,10 Z M9,10 L11,10 L11,12 L9,12 L9,10 Z M9,14 L11,14 L11,16 L9,16 L9,14 Z M13,14 L21,14 L21,16 L13,16 L13,14 Z M13,18 L21,18 L21,20 L13,20 L13,18 Z M9,18 L11,18 L11,20 L9,20 L9,18 Z"
      role="presentation"
    />
  </svg>
  <div>
    Example Child Text
  </div>
</div>
`;
